objects/fferpcore__FeatureConsoleActivation__c.object
<CustomObject>
    <description>Stores the current activation details for features and feature steps.</description>
    <fields>
        <fullName>fferpcore__ActivationNumber__c</fullName>
        <description>Number that identifies the related feature enablement logs.</description>
        <inlineHelpText>Number that identifies the related feature enablement logs.</inlineHelpText>
        <label>Activation Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the feature or feature step was enabled at the end of the operation.</description>
        <inlineHelpText>Indicates whether the feature or feature step was enabled at the end of the operation.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Memento__c</fullName>
        <description>Data that can be used when reverting or performing the feature step, such as previous state values or user selections. For example, previous state values can be restored when the feature step is reverted.</description>
        <inlineHelpText>Data that can be used when reverting or performing the feature step, such as previous state values or user selections. For example, previous state values can be restored when the feature step is reverted.</inlineHelpText>
        <label>State</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Status__c</fullName>
        <description>Status of the operation, such as Success or Error.</description>
        <inlineHelpText>Status of the operation, such as Success or Error.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TargetId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier for the feature or feature step.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for the feature or feature step.</inlineHelpText>
        <label>Target Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Feature Console Activation</label>
    <nameField>
        <displayFormat>FCA-{0000}</displayFormat>
        <label>Feature Console Activation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Console Activations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>